<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">W_camera</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="gps_menu_dock_settings">Dock Settings</string>
    <string name="gps_menu_using_boundary">Using Boundary</string>
    <string name="gps_menu_using_boundary_help">Boundary에 따른 녹화유무를 사용하시겠습니까?</string>
    <string name="gps_menu_latitude">Latitude</string>
    <string name="gps_menu_latitude_help">선착장의 위도를 입력하세요.</string>
    <string name="gps_menu_longitude">Longitude</string>
    <string name="gps_menu_longitude_help">선착장의 경도를 입력하세요.</string>
    <string name="gps_menu_set_current_location">Set Current Location</string>
    <string name="gps_menu_boundary">Boundary (meter)</string>
    <string name="gps_menu_boundary_help">녹화를 수행할 선착장의 범위를 지정해 주세요.</string>
    
    <string name="gps_menu_gps_settings">GPS Settings</string>
    <string name="gps_menu_min_speed">Minimum Speed (Km/H)</string>
    <string name="gps_menu_min_speed_help">해당 속도이상일 경우에만 녹화가 시작됩니다.</string>
    <string name="gps_menu_min_start_duration">Minimum Start Duration (sec)</string>
    <string name="gps_menu_min_start_duration_help">최저속도가 해당 시간 이상일 경우에만 녹화가 시작됩니다.</string>
    <string name="gps_menu_min_stop_duration">Minimum Stop Minimum Start Duration (sec) (sec)</string>
    <string name="gps_menu_min_stop_duration_help">정지상태가가 해당 시간 이상일 경우에만 녹화가 중지됩니다.</string>

    <string name="wifi_settings">Wi-Fi Settings</string>
    <string name="ap_name">AP Name</string>
    <string name="ap_name_help">연결할 AP명을 입력하세요.</string>
    <string name="server_address">Server Address</string>
    <string name="server_address_devide">.</string>
    <string name="server_address_help">연결할 Server의 IP를 입력하세요.</string>

    <string name="video_menu">Video Settings</string>
    
    <string name="video_menu_min_recording_duration">Min Recording Duration (sec)</string>
    <string name="video_menu_min_recording_duration_help">최소시간 이내의 파일은 저장되지 않습니다.</string>
    
    <string name="video_menu_video_format">Video Format</string>
    <string name="video_menu_video_format_help">녹화에 설정할 비디오 포맷을 선택해 주세요.</string>
    
    <string name="video_menu_resolution">Resolution</string>
    <string name="video_menu_resolution_help">녹화에 설정할 해상도를 선택해 주세요.</string>
    
    <string name="video_menu_bitrate">Bit Rate</string>
    <string name="video_menu_bitrate_help">녹화에 설정할 Bit Rate를 설정해 주세요.</string>
    
    <string name="video_menu_framerate">Frame Rate (sec)</string>
    <string name="video_menu_framerate_help">녹화에 설정할 Frame Rate를 설정해 주세요.</string>
    
    <string name="status_menu_gps_status">GPS Status</string>
    <string name="status_menu_gps_item_category">Latitude:\nLongitude:\nAltitude:\nAccuracy:\nBearing:\nSpeed(m/s):\nSpeed(Km/H):\nTime:\nMove Status:</string>
</resources>