<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- CAMERA MENU -->

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="25dp"
        android:background="#99999999"
        android:gravity="center_vertical"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:text="@string/video_menu"
        android:textSize="12sp"
        tools:ignore="SmallSp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#99FFFFFF" />
    <!-- CAMERA MENU - MIN RECORDING DURATION -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="25dp"
                android:gravity="center_vertical"
                android:text="@string/video_menu_min_recording_duration"
                android:textSize="18sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="15dp"
                android:layout_marginBottom="5dp"
                android:gravity="center_vertical"
                android:text="@string/video_menu_min_recording_duration_help"
                android:textSize="10sp"
                tools:ignore="SmallSp" />
        </LinearLayout>

        <Spinner
            android:id="@+id/camera_menu_min_recording_duration_spinner"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:spinnerMode="dropdown" />
    </LinearLayout>
    <!-- CAMERA MENU - VIDEO FORMAT -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="25dp"
                android:gravity="center_vertical"
                android:text="@string/video_menu_video_format"
                android:textSize="18sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="15dp"
                android:layout_marginBottom="5dp"
                android:gravity="center_vertical"
                android:text="@string/video_menu_video_format_help"
                android:textSize="10sp"
                tools:ignore="SmallSp" />
        </LinearLayout>

        <Spinner
            android:id="@+id/camera_menu_video_format_spinner"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:spinnerMode="dropdown" />
    </LinearLayout>
    <!-- CAMERA MENU - RESOLUTION -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="25dp"
                android:gravity="center_vertical"
                android:text="@string/video_menu_resolution"
                android:textSize="18sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="15dp"
                android:layout_marginBottom="5dp"
                android:gravity="center_vertical"
                android:text="@string/video_menu_resolution_help"
                android:textSize="10sp"
                tools:ignore="SmallSp" />
        </LinearLayout>

        <Spinner
            android:id="@+id/camera_menu_resolution_spinner"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <!-- CAMERA MENU - FRAMERATE -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="25dp"
                android:gravity="center_vertical"
                android:text="@string/video_menu_bitrate"
                android:textSize="18sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="15dp"
                android:layout_marginBottom="5dp"
                android:gravity="center_vertical"
                android:text="@string/video_menu_bitrate_help"
                android:textSize="10sp"
                tools:ignore="SmallSp" />
        </LinearLayout>

        <Spinner
            android:id="@+id/camera_menu_bitrate_spinner"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:spinnerMode="dropdown" />

    </LinearLayout>

    <!-- CAMERA MENU - FRAMERATE -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="25dp"
                android:gravity="center_vertical"
                android:text="@string/video_menu_framerate"
                android:textSize="18sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="15dp"
                android:layout_marginBottom="5dp"
                android:gravity="center_vertical"
                android:text="@string/video_menu_framerate_help"
                android:textSize="10sp"
                tools:ignore="SmallSp" />
        </LinearLayout>

        <Spinner
            android:id="@+id/camera_menu_framerate_spinner"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:spinnerMode="dropdown" />
    </LinearLayout>

</LinearLayout>